Add UT for dataHub and scope

--- a/src/engine/source/metrics/CMakeLists.txt
+++ b/src/engine/source/metrics/CMakeLists.txt
@@ -40,17 +40,19 @@ ${ENGINE_METRICS_INCLUDE_DIR}
 
 # Tests
 if(ENGINE_BUILD_TEST)
-set(TEST_COMPONENT_DIR ${CMAKE_CURRENT_LIST_DIR}/test/component)
 set(TEST_UNIT_DIR ${CMAKE_CURRENT_LIST_DIR}/test/unit)
 set(TEST_MOCK_DIR ${CMAKE_CURRENT_LIST_DIR}/test/unit/mocks)
 
-add_executable(metrics_test
-  ${TEST_COMPONENT_DIR}/interface_test.cpp
+add_executable(metrics_unit_test
+  ${TEST_UNIT_DIR}/metricsManager_test.cpp
+  ${TEST_UNIT_DIR}/dataHub_test.cpp
+  ${TEST_UNIT_DIR}/dataHubExporter_test.cpp
+  ${TEST_UNIT_DIR}/metricsScope_test.cpp
 )
 
-target_include_directories(metrics_test INTERFACE ${TEST_MOCK_DIR})
+target_include_directories(metrics_unit_test INTERFACE ${TEST_MOCK_DIR})
 
 # TODO: Replace test_mocks with the metrics executable when you have the test folder available.
-target_link_libraries(metrics_test gtest_main gmock base metrics)
-gtest_discover_tests(metrics_test)
+target_link_libraries(metrics_unit_test gtest_main gmock base metrics)
+gtest_discover_tests(metrics_unit_test)
 endif(ENGINE_BUILD_TEST)
