--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -45,7 +45,7 @@ info:
   title: 'Wazuh API REST'
   license:
     name: 'GPL 2.0'
-    url: 'https://github.com/wazuh/wazuh/blob/v4.5.1-rc2/LICENSE'
+    url: 'https://github.com/wazuh/wazuh/blob/v4.5.1/LICENSE'
 
 servers:
   - url: '{protocol}://{host}:{port}'
@@ -7058,7 +7058,7 @@ paths:
                 api_version: "v4.3.0"
                 revision: '40100'
                 license_name: "GPL 2.0"
-                license_url: "https://github.com/wazuh/wazuh/blob/v4.5.1-rc2/LICENSE"
+                license_url: "https://github.com/wazuh/wazuh/blob/v4.5.1/LICENSE"
                 hostname: "wazuh"
                 timestamp: "2019-04-02T08:08:11Z"
 
