--- a/src/wazuh_modules/syscollector/tests/CMakeLists.txt
+++ b/src/wazuh_modules/syscollector/tests/CMakeLists.txt
@@ -13,6 +13,6 @@ add_subdirectory(sysCollectorImp)
 add_subdirectory(sysNormalizer)
 if (NOT ${TARGET} STREQUAL "")
     if(${TARGET} STREQUAL "server")
-        add_subdirectory(sysCollectorFlatbuffers)
+        add_subdirectory(sysCollectorDeltas)
     endif()
 endif()
