--- a/src/wazuh_modules/syscollector/tests/sysCollectorDeltas/CMakeLists.txt
+++ b/src/wazuh_modules/syscollector/tests/sysCollectorDeltas/CMakeLists.txt
@@ -1,15 +1,14 @@
 cmake_minimum_required(VERSION 3.12.4)
 
-project(syscollectorflatbuffers_unit_test)
+project(syscollectordeltas_unit_test)
 
 get_filename_component(SRC_FOLDER     ${CMAKE_SOURCE_DIR}/../../ ABSOLUTE)
 
 set(CMAKE_CXX_FLAGS_DEBUG "-g --coverage")
 
 file(GLOB FLATBUFFER_SCHEMAS
-  "${CMAKE_SOURCE_DIR}/flatbuffers/*_data.fbs"
-  "${CMAKE_SOURCE_DIR}/flatbuffers/syscollector_deltas.fbs"
-  "${CMAKE_SOURCE_DIR}/flatbuffers/common_agentInfo.fbs"
+  "${CMAKE_SOURCE_DIR}/../../shared_modules/utils/flatbuffers/schemas/common/*"
+  "${CMAKE_SOURCE_DIR}/../../shared_modules/utils/flatbuffers/schemas/syscollectorDeltas/*"
 )
 file(COPY ${FLATBUFFER_SCHEMAS} DESTINATION ${CMAKE_SOURCE_DIR}/build/bin/)
 
@@ -31,3 +30,9 @@ target_link_libraries(${PROJECT_NAME}
 
 add_test(NAME ${PROJECT_NAME}
     COMMAND ${PROJECT_NAME})
+
+add_custom_target(set_path
+    COMMAND sed -i "s/..common//" ${CMAKE_SOURCE_DIR}/build/bin/syscollector_deltas.fbs
+    COMMENT "Set common flatbuffers schema path"
+)
+add_dependencies(${PROJECT_NAME} set_path)
