Add workflow dispatch inputs

--- a/.github/workflows/api-unit-tests.yml
+++ b/.github/workflows/api-unit-tests.yml
@@ -2,6 +2,11 @@ name: API unit tests
 
 on:
   workflow_dispatch:
+    inputs:
+      base_branch:
+        description: 'Base branch'
+        required: true
+        default: 'main'
   pull_request:
     paths:
       - '.github/workflows/api-unit-tests.yml'
