--- a/ruleset/sca/debian/cis_debian10.yml
+++ b/ruleset/sca/debian/cis_debian10.yml
@@ -1110,7 +1110,7 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: all
+    condition: any
     rules:
       - 'c:sh -c "stat -Lc ''%a %A %u %U %g %G'' /etc/motd" -> r:644|600 &&r:-rw-r--r--|-rw------- && r:0 root 0 root'
       - "not f:/etc/motd"
